# nontonaja

./: .gitignore  README.md  config.example.toml  pyproject.toml  scraping-flow.md  setup.sh
src/nontonaja/: cli.py  config.py  dependencies.py  download.py  history.py  launcher.py  proxy.py  quality.py
src/nontonaja/players/: celluloid.py  mpv.py  vlc.py
src/nontonaja/providers/: browser.py  decoder.py  flixhq.py  idlix.py  lk21.py
